# modality-defmt-plugins

./: Cargo.toml  README.md
.github/workflows/: ci.yml  integration_tests.yml  release.yml
src/: client.rs  config.rs  context_manager.rs  defmt_reader.rs  error.rs  event_record.rs  lib.rs  opts.rs  time.rs
test_system/: .gdbinit  .gitignore  Cargo.toml  README.md  memory.x  test_suite.robot  tests.robot  view_expansion.sh  view_rtt.sh
test_system/.cargo/: config
test_system/config/: reflector-config.toml  workspace.toml
test_system/renode/: RttReader.cs  atsamd51g19a.repl  commands.py  robot_frameworkd_setup.resc
test_system/robot_framework/: ModalityClientLibrary.py
test_system/scripts/: get_test_run_id.sh  run_robot_framework.sh  setup_modality.sh  setup_robot_framework.sh  view_expansion.sh  view_rtt.sh
test_system/specs/: tests.speqtr
test_system/src/: main.rs
test_system/tools/mutator-server/: Cargo.toml
test_system/tools/mutator-server/src/: main.rs  mutator.rs
